<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.detail.DetailActivity">

    <ImageView
        android:id="@+id/iv_profile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/user1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/profile_photo" />

    <TextView
        android:id="@+id/tv_name"
        style="@style/Text.Bold"
        android:layout_marginTop="8dp"
        android:text="@string/dummy_name"
        android:textColor="@color/dark_black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/iv_profile"
        app:layout_constraintStart_toStartOf="@+id/iv_profile"
        app:layout_constraintTop_toBottomOf="@+id/iv_profile" />

    <TextView
        android:id="@+id/tv_username"
        style="@style/Text.Normal"
        android:layout_marginTop="-4dp"
        android:text="@string/dummy_username"
        android:textColor="@color/dark_grey"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_name"
        app:layout_constraintStart_toStartOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <TextView
        android:id="@+id/tv_repository"
        style="@style/Text.Medium"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/dummy_repository"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toBottomOf="@+id/tv_followers"
        app:layout_constraintEnd_toStartOf="@+id/tv_followers"
        app:layout_constraintTop_toTopOf="@+id/tv_followers" />

    <TextView
        android:id="@+id/tv_followers"
        style="@style/Text.Medium"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/dummy_followers"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toEndOf="@+id/tv_name"
        app:layout_constraintStart_toStartOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_username" />

    <TextView
        android:id="@+id/tv_following"
        style="@style/Text.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:text="@string/dummy_following"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toBottomOf="@+id/tv_followers"
        app:layout_constraintStart_toEndOf="@+id/tv_followers"
        app:layout_constraintTop_toTopOf="@+id/tv_followers" />

    <TextView
        android:id="@+id/tv_company"
        style="@style/Text.Normal"
        android:layout_marginTop="16dp"
        android:drawablePadding="4dp"
        android:text="@string/dummy_company"
        android:textColor="@color/dark_grey"
        app:layout_constraintEnd_toEndOf="@+id/tv_username"
        app:layout_constraintStart_toStartOf="@+id/tv_username"
        app:layout_constraintTop_toBottomOf="@+id/tv_repository"
        app:drawableStartCompat="@drawable/ic_company"
        app:drawableTint="@color/dark_grey" />

    <TextView
        android:id="@+id/tv_location"
        style="@style/Text.Normal"
        android:text="@string/dummy_location"
        android:textColor="@color/dark_grey"
        app:layout_constraintEnd_toEndOf="@+id/tv_company"
        app:layout_constraintStart_toStartOf="@+id/tv_company"
        app:layout_constraintTop_toBottomOf="@+id/tv_company"
        app:drawableStartCompat="@drawable/ic_location"
        app:drawableTint="@color/dark_grey" />

</androidx.constraintlayout.widget.ConstraintLayout>